--- a/package.json
+++ b/package.json
@@ -46,6 +46,7 @@
     "input-otp": "^1.4.2",
     "lucide-react": "^0.562.0",
     "motion": "^12.29.2",
+    "nanoid": "^5.1.6",
     "next": "16.0.6",
     "next-themes": "^0.4.6",
     "postgres": "^3.4.8",
